<resources>
    <!--Fuel Economy Wizard-->
    <string name="app_name">油耗助手</string>

    <string name="app_slogan">记录美好生活</string>
    <!--加载-->
    <string name="loading">加载中&#8230;</string>
    <string name="load_error">加载出错</string>
    <string name="no_network">没有网络，点击重试</string>
    <string name="no_data">没有数据</string>

    <!--错误-->
    <string name="error_unknown">未知错误</string>
    <string name="error_http">HTTP错误</string>
    <string name="error_network">当前网络不可用，请检查您的网络连接</string>
    <string name="error_parse">解析错误</string>
    <string name="error_ssl">SSL错误</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  NAV string  -->
    <string name="menu_home">首页</string>
    <string name="menu_mine">我的</string>
    <string name="add">添加</string>

    <string name="moto_name">尊贵的UY125车主</string>
    <string name="last_fuel">最新油耗</string>
    <string name="unit_l">升/百公里</string>
</resources>