<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.main.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/theme"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>

        <!--https://developer.android.google.cn/guide/navigation/navigation-getting-started?hl=zh_cn-->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_container"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_transparent_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/menu_home"
                app:drawableTopCompat="@drawable/bottom_nav_home" />

            <TextView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/add"
                app:drawableTopCompat="@drawable/bottom_add" />

            <TextView
                android:id="@+id/nav_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/menu_mine"
                app:drawableTopCompat="@drawable/bottom_nav_mine" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>